--- a/android/gradle/dependencies.gradle
+++ b/android/gradle/dependencies.gradle
@@ -99,7 +99,7 @@ def androidx = [
 def test = [
     junit: "junit:junit:4.12",
     mockito: "org.mockito:mockito-core:2.27.0",
-    mockitoKotlin: "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0",
+    mockitoKotlin: "org.mockito.kotlin:mockito-kotlin:4.0.0",
     compileTesting: "com.google.testing.compile:compile-testing:0.17",
     truth: "com.google.truth:truth:0.43",
 ]
